feat: configure unocss

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,14 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Miguel Daipré</title>
+  </head>
+  <body class="bg-darkslate-500">
+    <h1 class="text-primary-500">Miguel Daipré</h1>
+  </body>
 </html>
