feat: improve intro seo

--- a/src/components/Intro/Intro.astro
+++ b/src/components/Intro/Intro.astro
@@ -5,7 +5,7 @@ import { presentation } from '@config/presentation'
 ---
 <Card>
   <h1 class="text-primary-100 text-2xl font-bold m-0 z-2">{presentation.title}</h1>
-  <p class="text-primary-200 m-0 font-light text-base">{presentation.description}</p>
+  <h2 class="text-primary-200 m-0 font-light text-base">{presentation.description}</h2>
   <SocialLinks />
 </Card>
 
