--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import MainLayout from '@layouts/MainLayout.astro'
-import Intro from '@components/Intro/Intro.astro'
 import Header from '@components/Header/Header.astro'
+import Intro from '@components/Intro/Intro.astro'
+import LatestPosts from '@components/LatestPosts/LatestPosts.astro'
 ---
 
 <MainLayout>
   <Header />
-  <main>
+  <main class="flex flex-col gap-20">
     <Intro />
+    <LatestPosts />
   </main>
 </MainLayout>
