--- a/src/components/LatestPosts/LatestPosts.astro
+++ b/src/components/LatestPosts/LatestPosts.astro
@@ -1,29 +1,9 @@
 ---
 import Link from '@components/Link/Link.astro'
-import PostCard from './PostCard.astro'
+import PostCard from '@components/PostCard/PostCard.astro'
 
-type Post = {
-  title: string
-  description: string
-  slug: string
-  publishedAt: Date
-}
-
-const posts: Post[] = [
-  {
-    title: "React Strict Web",
-    description: "Learn how to get started with React Strict Web.",
-    slug: "/posts/react-strict-web",
-    publishedAt: new Date(),
-  },
-  {
-    title: "Setting up a React Native Monorepo",
-    description: "Learn how to set up a React Native Monorepo",
-    slug: "/posts/react-native-monorepo",
-    publishedAt: new Date(),
-  },
-];
-
+import { latestPosts } from '@data/posts';
+const posts = latestPosts(2);
 ---
 
 <article class="flex flex-col">
