--- a/src/components/Intro/Intro.astro
+++ b/src/components/Intro/Intro.astro
@@ -1,11 +1,26 @@
 ---
+import { Image } from 'astro:assets';
+import MiguelPicture from '@assets/images/miguel-daipre-picture.jpeg'
+
 import Card from '@components/Card/Card.astro'
 import SocialLinks from '@components/SocialLinks/SocialLinks.astro'
 import { presentation } from '@config/presentation'
 ---
 <Card>
-  <h1 class="text-primary-100 text-2xl font-bold m-0 z-2">{presentation.title}</h1>
-  <h2 class="text-primary-200 m-0 font-light text-base">{presentation.description}</h2>
-  <SocialLinks />
+  <div class="flex gap-8 items-center justify-between max-sm:flex-wrap">
+    <Image
+      class="w-24 h-24 rounded-full"
+      decoding="async"
+      loading="eager"
+      src={MiguelPicture} 
+      alt="Miguel Daipré - Profile"
+    />
+
+    <div class="flex flex-col gap-4">
+      <h1 class="text-primary-100 text-2xl font-bold m-0 z-2">{presentation.title}</h1>
+      <h2 class="text-primary-200 m-0 font-light text-base">{presentation.description}</h2>
+      <SocialLinks />
+    </div>
+  </div>
 </Card>
 
