feat: lint and format all files

--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -1,13 +1,13 @@
 ---
-import CardContent from "./CardContent.astro";
+import CardContent from './CardContent.astro'
 
 interface Props {
-  title?: string;
-  body?: string;
-  href?: string;
+	title?: string
+	body?: string
+	href?: string
 }
 
-const { title, body, href } = Astro.props;
+const { title, body, href } = Astro.props
 ---
 
 <article
