--- a/src/components/LatestPosts/LatestPosts.astro
+++ b/src/components/LatestPosts/LatestPosts.astro
@@ -2,8 +2,8 @@
 import Link from '@components/Link/Link.astro'
 import PostCard from '@components/PostCard/PostCard.astro'
 
-import { latestPosts } from '@data/posts';
-const posts = latestPosts(2);
+import { latestPosts } from '@data/posts'
+const posts = latestPosts(2)
 ---
 
 <article class="flex flex-col">
