--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,18 +1,19 @@
 ---
-import MainLayout from '@layouts/MainLayout.astro';
 import { getCollection } from 'astro:content'
+import MainLayout from '@layouts/MainLayout.astro'
 
-export const prerender = true;
+export const prerender = true
 
 export async function getStaticPaths() {
-  const posts = await getCollection('posts');
-  return posts.map(post => ({
-    params: { slug: post.slug }, props: { post },
-  }));
+	const posts = await getCollection('posts')
+	return posts.map(post => ({
+		params: { slug: post.slug },
+		props: { post },
+	}))
 }
 
-const { post } = Astro.props;
-const { Content } = await post.render();
+const { post } = Astro.props
+const { Content } = await post.render()
 ---
 <MainLayout title={post.data.title} description={post.data.description}>
   <main class="flex flex-col gap-6">
