--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,8 +1,8 @@
 ---
-import MainLayout from '@layouts/MainLayout.astro'
 import PostCard from '@components/PostCard/PostCard.astro'
+import MainLayout from '@layouts/MainLayout.astro'
 
-import { posts } from '@data/posts';
+import { posts } from '@data/posts'
 ---
 
 <MainLayout>
