--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { removeTrailingSlash } from '@utils/removeTrailingSlash'
 
-const pathname = removeTrailingSlash(Astro.url.pathname);
+const pathname = removeTrailingSlash(Astro.url.pathname)
 ---
 
 <header class="z-40 flex w-full flex-col gap-2 md:flex-row md:justify-between">
