--- a/src/components/Intro/Intro.astro
+++ b/src/components/Intro/Intro.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from 'astro:assets';
+import { Image } from 'astro:assets'
 import MiguelPicture from '@assets/images/miguel-daipre-picture.jpeg'
 
 import Card from '@components/Card/Card.astro'
