--- a/src/components/Link/Link.astro
+++ b/src/components/Link/Link.astro
@@ -1,12 +1,12 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from 'astro/types'
 
 type Props = HTMLAttributes<'a'> & {
-  label: string;
-  isUnderline?: boolean;
-};
+	label: string
+	isUnderline?: boolean
+}
 
-const { label, isUnderline, ...props } = Astro.props;
+const { label, isUnderline, ...props } = Astro.props
 ---
 
 <a
