--- a/src/components/PostCard/PostCard.astro
+++ b/src/components/PostCard/PostCard.astro
@@ -2,10 +2,10 @@
 import { formatPublishedDate } from '@utils/formatPublishedDate'
 
 interface Props {
-  title: string;
-  description: string;
-  publishedAt: Date;
-  slug: string;
+	title: string
+	description: string
+	publishedAt: Date
+	slug: string
 }
 
 const { title, description, publishedAt, slug } = Astro.props
@@ -18,7 +18,7 @@ const { title, description, publishedAt, slug } = Astro.props
     <div class="flex flex-col gap-2">
       <p class="text-primary-100 text-base font-bold m-0 z-2">{title}</p>
       <p class="text-primary-200 m-0 font-light text-base truncate">{description}</p>
-      <spa class="text-gray-400">{formatPublishedDate(publishedAt)}</span>
+      <span class="text-gray-400">{formatPublishedDate(publishedAt)}</span>
     </div>
   </a>
 </article>
