feat: introduce Experience section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Experience from '@components/Experience/Experience.astro'
 import Intro from '@components/Intro/Intro.astro'
 import LatestPosts from '@components/LatestPosts/LatestPosts.astro'
 import MainLayout from '@layouts/MainLayout.astro'
@@ -8,5 +9,6 @@ import MainLayout from '@layouts/MainLayout.astro'
   <main class="flex flex-col gap-20">
     <Intro />
     <LatestPosts />
+    <Experience />
   </main>
 </MainLayout>
