--- a/src/components/Experience/Experience.astro
+++ b/src/components/Experience/Experience.astro
@@ -11,19 +11,22 @@ const experiences = [
 		company: 'TOTVS',
 		position: 'Mobile Developer',
 		period: '2022 - Present',
-		description: '',
+		description:
+			"As a mobile developer at TOTVS, I was responsible for developing and executing improvements to the facial recognition process, as well as improving the app's performance and keeping it up to date with the latest React Native releases.",
 	},
 	{
 		company: 'FK Grupo',
 		position: 'Software Developer',
 		period: '2019 - 2021',
-		description: '',
+		description:
+			"As a software developer at FK Grupo, I was responsible for architecting and developing offline-first mobile app's with React Native, Redux and Redux Saga. I was also responsible for developing and maintaining micro services in Node JS with TDD, using the Kong gateway.",
 	},
 	{
 		company: 'OG Propaganda',
 		position: 'Software Developer',
 		period: '2017 - 2019',
-		description: '',
+		description:
+			'As a software developer at OG Propaganda, I was responsible for maintaining and creating new websites with Wordpress. I also created a currency quotation plugin for WP.',
 	},
 ] satisfies Exprience[]
 ---
