--- a/src/components/Experience/Experience.astro
+++ b/src/components/Experience/Experience.astro
@@ -39,13 +39,12 @@ const experiences = [
   {experiences.map((experience) => (
     <section class="flex flex-col w-full">
       <div class="gap-6 mt-6">
-        
           <article
             class="overflow-hidden rounded-lg p-6 border border-darkslate-100 hover:border-primary-700 hover:-translate-y-2 align-start flex-none justify-start relative transform perspective-1200 w-full transition-all duration-300 ease-in-out col-span-1 h-auto"
             >
             <div class="h-full w-full">
               <div class="flex flex-col gap-2">
-                <div class="flex flex-row justify-between">
+                <div class="xl:flex xl:flex-row xl:justify-between">
                   <div class="flex gap-2">
                     <p class="text-primary-100 text-base font-bold m-0 z-2">{experience.company} - </p>
                     <p class="text-primary-700 text-base m-0 z-2">{experience.position}</p>
