feat: add get in touch section

--- a/src/components/Link/Link.astro
+++ b/src/components/Link/Link.astro
@@ -12,7 +12,7 @@ const { label, isUnderline, ...props } = Astro.props
 <a
   href={props.href}
   class:list={{
-    ["hover:text-gray-400 cursor-pointer"]: true,
+    ["hover:text-gray-400 text-primary-600 cursor-pointer"]: true,
     ["underline decoration-dashed underline-offset-8"]: isUnderline,
   }}
   {...props}
