--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Experience from '@components/Experience/Experience.astro'
+import GetInTouch from '@components/GetInTouch/GetInTouch.astro'
 import Intro from '@components/Intro/Intro.astro'
 import LatestPosts from '@components/LatestPosts/LatestPosts.astro'
 import MainLayout from '@layouts/MainLayout.astro'
@@ -10,5 +11,6 @@ import MainLayout from '@layouts/MainLayout.astro'
     <Intro />
     <LatestPosts />
     <Experience />
+    <GetInTouch />
   </main>
 </MainLayout>
