--- a/src/components/LatestPosts/LatestPosts.astro
+++ b/src/components/LatestPosts/LatestPosts.astro
@@ -4,12 +4,15 @@ import PostCard from '@components/PostCard/PostCard.astro'
 
 import { latestPosts } from '@data/posts'
 const posts = latestPosts(2)
+
+import { getLangFromUrl, useTranslations } from '@i18n/i18n'
+const t = useTranslations(getLangFromUrl(Astro.url))
 ---
 
 <article class="flex flex-col">
   <header class="flex flex-row w-full justify-between">
-    <h3 class="text-primary-100 text-xl font-bold m-0 z-2">Latest posts</h3>
-    <Link href="/posts" label="See all posts" isUnderline target="_self" />
+    <h3 class="text-primary-100 text-xl font-bold m-0 z-2">{t('site.latestPosts')}</h3>
+    <Link href="/posts" label={t('site.seeAllPosts')} isUnderline target="_self" />
   </header>
 
   <section class="flex flex-col w-full">
@@ -28,7 +31,7 @@ const posts = latestPosts(2)
       </div>
     ) : (
       <div class="gap-6 mt-6">
-        <p class="text-primary-200 m-0 font-light text-base">Soon, stay connected 👀</p>
+        <p class="text-primary-200 m-0 font-light text-base">{t('site.soonStayConnected')} 👀</p>
       </div>
     )}
   </section>
