--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -2,7 +2,8 @@
 import PostCard from '@components/PostCard/PostCard.astro'
 import MainLayout from '@layouts/MainLayout.astro'
 
-import { posts } from '@data/posts'
+import { getPosts } from '@data/posts'
+const posts = await getPosts()
 
 import { getLangFromUrl, useTranslations } from '@i18n/i18n'
 const t = useTranslations(getLangFromUrl(Astro.url))
