--- a/src/components/LatestPosts/LatestPosts.astro
+++ b/src/components/LatestPosts/LatestPosts.astro
@@ -3,7 +3,7 @@ import Link from '@components/Link/Link.astro'
 import PostCard from '@components/PostCard/PostCard.astro'
 
 import { latestPosts } from '@data/posts'
-const posts = latestPosts(2)
+const posts = await latestPosts(2)
 
 import { getLangFromUrl, useTranslations } from '@i18n/i18n'
 const t = useTranslations(getLangFromUrl(Astro.url))
