--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -30,7 +30,7 @@ const t = useTranslations(getLangFromUrl(Astro.url))
           </div>
         ) : (
           <div class="gap-6 mt-6">
-            <p class="text-primary-200 m-0 font-light text-base">Soon, stay connected 👀</p>
+            <p class="text-primary-200 m-0 font-light text-base">{t('site.soonStayConnected')} 👀</p>
           </div>
         )}
       </section>
