--- a/src/components/GetInTouch/GetInTouch.astro
+++ b/src/components/GetInTouch/GetInTouch.astro
@@ -1,5 +1,6 @@
 ---
 import SocialLinks from '@components/SocialLinks/SocialLinks.astro'
+import { presentation } from '@config/presentation'
 
 import { getLangFromUrl, useTranslations } from '@i18n/i18n'
 const t = useTranslations(getLangFromUrl(Astro.url))
@@ -12,8 +13,8 @@ const t = useTranslations(getLangFromUrl(Astro.url))
 
   <section class="flex flex-col w-full gap-6 mt-6">
     <p class="text-primary-200 m-0 font-light text-base">{t('contact.emailMeAt')}
-      <a href={`mailto:migueldaipre@gmail.com`} class="text-primary-700 hover:text-primary-500">
-        migueldaipre@gmail.com
+      <a href={`mailto:${presentation.mail}`} class="text-primary-700 hover:text-primary-500">
+        {presentation.mail}
       </a>
       {t('contact.orFollowMeOn')}
     </p>
