feat: handle i18n better

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,3 @@
 ---
-import Experience from '@components/Experience/Experience.astro'
-import GetInTouch from '@components/GetInTouch/GetInTouch.astro'
-import Intro from '@components/Intro/Intro.astro'
-import LatestPosts from '@components/LatestPosts/LatestPosts.astro'
-import MainLayout from '@layouts/MainLayout.astro'
+// Required file when use redirectToDefaultLocale = true
 ---
-
-<MainLayout>
-  <main class="flex flex-col gap-20">
-    <Intro />
-    <LatestPosts />
-    <Experience />
-    <GetInTouch />
-  </main>
-</MainLayout>
