--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,10 +6,15 @@ const pathname = removeTrailingSlash(Astro.url.pathname)
 
 import { getLangFromUrl, useTranslations } from '@i18n/i18n'
 const t = useTranslations(getLangFromUrl(Astro.url))
+
+const language = Astro.currentLocale
+
+const homePath = `/${language}`;
+const postsPath = `/${language}/posts`;
 ---
 
 <header class="z-40 flex w-full flex-col gap-2 md:flex-row md:justify-between">
-  <a href="/" class="hover:text-primary-500"
+  <a href={homePath} class="hover:text-primary-500"
     >{presentation.mail}</a
   >
 
@@ -17,22 +22,22 @@ const t = useTranslations(getLangFromUrl(Astro.url))
     <ul role="list" class="flex flex-row gap-2">
       <li>
         <a
-          href="/"
+          href={homePath}
           class:list={{
             ["hover:text-gray-100"]: true,
-            ["hover:text-primary-500"]: pathname === "/",
-            ["text-primary-700"]: pathname === "/",
+            ["hover:text-primary-500"]: pathname === homePath,
+            ["text-primary-700"]: pathname === homePath,
           }}>{t('site.home')}</a
         >
       </li>
       <li>/</li>
       <li>
         <a
-          href="/posts"
+          href={postsPath}
           class:list={{
             ["hover:text-gray-100"]: true,
-            ["hover:text-primary-500"]: pathname === "/posts",
-            ["text-primary-600"]: pathname === "/posts",
+            ["hover:text-primary-500"]: pathname === postsPath,
+            ["text-primary-600"]: pathname === postsPath,
           }}>{t('site.posts')}</a
         >
       </li>
