--- a/src/pages/[lang]/posts/[...slug].astro
+++ b/src/pages/[lang]/posts/[...slug].astro
@@ -6,10 +6,14 @@ export const prerender = true
 
 export async function getStaticPaths() {
 	const posts = await getCollection('posts')
-	return posts.map(post => ({
-		params: { slug: post.slug },
-		props: { post },
-	}))
+	return posts.map(post => {
+    const [lang, ...slug] = post.slug.split('/');
+
+    return {
+		  params: { lang, slug: slug.join('/') || undefined },
+		  props: { post },
+	  }
+  })
 }
 
 const { post } = Astro.props
