--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,6 @@ const {
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
-    <meta name="robots" content="/favicon/sitemap-index.xml" />
     <meta name="author" content={siteConfig.author} />
 
     <meta property="og:title" content={title} />
@@ -40,7 +39,8 @@ const {
 
     <link rel="preconnect" href="https://cdn.fontshare.com" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    
     <title>{title}</title>
   </head>
   <body class="mx-auto flex flex-col gap-9 bg-darkslate-700 px-10 py-8 md:gap-20 md:py-16 text-sm text-white min-h-screen max-w-[872px]">
