--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,6 +32,9 @@ const {
     <meta property="og:url" content={Astro.url.origin} />
     <meta property="og:image" content={image} />
 
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
