--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,8 @@ const {
 	image = siteConfig.imageOg,
 } = Astro.props
 
-const ogImage = `${Astro.url.origin}/${image}`
+const ogUrl = Astro.url.href
+const ogImage = `${Astro.url.href}/${image}`
 ---
 
 <!doctype html>
@@ -32,7 +33,7 @@ const ogImage = `${Astro.url.origin}/${image}`
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content={Astro.url.origin} />
+    <meta property="og:url" content={ogUrl} />
     <meta property="og:image" content={ogImage} />
     
     <meta property="og:image:width" content="800" />
