chore: convert rn 75 post to draft

--- a/src/pages/[lang]/posts/[...slug]/index.astro
+++ b/src/pages/[lang]/posts/[...slug]/index.astro
@@ -21,9 +21,9 @@ const { Content } = await post.render()
 ---
 <MainLayout title={post.data.title} description={post.data.description} image={post.data.ogImage}>
   <main class="flex flex-col gap-4">
-    <h1 class="text-4xl text-gray-100">{post.data.title}</h1>
-    <h2 class="text-primary-200 font-light text-base">{post.data.description}</h2>
-    <article class="text-base prose">
+    <h1 class="text-4xl text-gray-100 font-bold">{post.data.title}</h1>
+    <h2 class="text-primary-200 text-xl font-light">{post.data.description}</h2>
+    <article class="text-base prose mt-10">
       <Content />
     </article>
   </main>
